--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py27-twisted-132, py27-twisted-trunk, py33-twisted-trunk, pyflakes,
-          pyflakes3, sphinx
+envlist = py27-twisted-132, py33-twisted-132, py27-twisted-trunk,
+          py33-twisted-trunk, pyflakes, pyflakes3, sphinx
 
 
 [testenv]
