--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27-twisted-132, py33-twisted-132, py27-twisted-trunk,
 
 
 [testenv]
-deps = txspinneret[dev]
+deps = .[dev]
 commands =
     {envpython} setup.py --version
     {envpython} -m unittest discover txspinneret.test
