Fix Sphinx tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands = pyflakes txspinneret
 
 [testenv:sphinx]
 deps =
-    txspinneret[doc]
+    -e.[doc]
     sphinx
 basepython = python2.7
 commands =
