--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py27-twisted-132, py33-twisted-132, py27-twisted-trunk,
-          py33-twisted-trunk, pyflakes, pyflakes3, sphinx
+envlist = py27-twisted-132, py27-twisted-trunk, pyflakes, sphinx
 
 
 [testenv]
@@ -17,22 +16,10 @@ deps =
     {[testenv]deps}
     Twisted==13.2
 
-[testenv:py33-twisted-132]
-basepython = python3.3
-deps =
-    {[testenv]deps}
-    Twisted==13.2
-
 
 ## Trunk Twisted ##
 [testenv:py27-twisted-trunk]
 basepython = python2.7
-deps =
-    {[testenv]deps}
-    git+git://github.com/twisted/twisted.git
-
-[testenv:py33-twisted-trunk]
-basepython = python3.3
 deps =
     {[testenv]deps}
     git+git://github.com/twisted/twisted.git
@@ -42,11 +29,6 @@ deps =
 [testenv:pyflakes]
 deps = pyflakes
 basepython = python2.7
-commands = pyflakes txspinneret
-
-[testenv:pyflakes3]
-deps = pyflakes
-basepython = python3.3
 commands = pyflakes txspinneret
 
 [testenv:sphinx]
