Add Twisted 14.0 to tox while we're at it.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-twisted-132, py27-twisted-trunk, pyflakes, sphinx
+envlist = py27-twisted-132, py27-twisted-140, py27-twisted-trunk, pyflakes, sphinx
 
 
 [testenv]
@@ -15,6 +15,14 @@ basepython = python2.7
 deps =
     {[testenv]deps}
     Twisted==13.2
+
+
+# Twisted 14.0
+[testenv:py27-twisted-140]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    Twisted==14.0
 
 
 ## Trunk Twisted ##
